macro/tests/failures/02-fail-too-long.stderr
error: pubkey array is not 32 bytes long: len=40
  --> $DIR/02-fail-too-long.rs:14:9
   |
14 |         "my1111111111111111111111111111111111111111111111111111"
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
